@@ -44,7 +44,7 @@
 
 #include <unistd.h>
 
-#define DEBUG_ALLOC           0
+#define DEBUG_ALLOC           1
 #define DEBUG_METHOD_TRACE    0
 
 @implementation PTYSession
@@ -177,6 +177,7 @@ static NSString *PWD_ENVVALUE = @"~";
     [TEXTVIEW setDelegate: self];
     [TEXTVIEW setAntiAlias: [[PreferencePanel sharedInstance] antiAlias]];
     [SCROLLVIEW setDocumentView:TEXTVIEW];
+    [TEXTVIEW release];
     [SCROLLVIEW setDocumentCursor: [NSCursor arrowCursor]];
 
     ai_code=0;
